<resources>
    <string name="app_name">Auto-Park</string>
    <string name="login">Login ?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="resetpass">Forgot password?</string>
    <string name="name">name</string>
    <string name="matricule">Matricule</string>
    <string name="phone">Phone</string>
    <string name="title_home">Book a Spot</string>
    <string name="date">Select a date :</string>
    <string name="start">Start Time</string>
    <string name="hours">Select Hours</string>
    <!--    -->


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>


</resources>